fix skills list so content wraps, change theme primary color, and redesign project card

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,7 +1,7 @@
 // https://getbootstrap.com/docs/5.3/utilities/colors/#sass-variables
 
 // Set the primary color for the theme
-$blue: #61dbfb;
+$primary: #4ec9b0; // same as primary-green in GlobalStyles
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
 
